# ParallelGraphColoring

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  ParallelGraphColoring.cbp  README.md  main.cpp
algorithms/: Algorithm.h  Greedy.cpp  Greedy.h  JP.cpp  JP.h  LDF.cpp  LDF.h  Luby.cpp  Luby.h  MIS_Sequential.cpp  MIS_Sequential.h  ParallelColoring.h  SDL.cpp  SDL.h  Sequential.cpp  Sequential.h
classes/: Graph.cpp  Graph.h  Vertex.cpp  Vertex.h
outputs/: rgg_n_2_15_s0.graph.csv  rgg_n_2_16_s0.graph.csv  rgg_n_2_17_s0.graph.csv  rgg_n_2_18_s0.graph.csv  rgg_n_2_19_s0.graph.csv  rgg_n_2_20_s0.graph.csv  rgg_n_2_21_s0.graph.csv
parse/: Dimacs10Parser.cpp  Dimacs10Parser.h  DimacsParser.cpp  DimacsParser.h  Parser.cpp  Parser.h
resolve/: Resolve.cpp  Resolve.h
tools/: Memory.cpp  Memory.h  OutputCsv.h  Splitter.h  span.hpp
